--- a/AdventOfCode2020.Tests/AdventOfCode2020.Tests.csproj
+++ b/AdventOfCode2020.Tests/AdventOfCode2020.Tests.csproj
@@ -27,6 +27,9 @@
     <None Update="Input\input6.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Input\input7.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
   </ItemGroup>
 
 </Project>
