Day 11 Part 1 - Apply seating rules

--- a/AdventOfCode2020.Tests/AdventOfCode2020.Tests.csproj
+++ b/AdventOfCode2020.Tests/AdventOfCode2020.Tests.csproj
@@ -21,6 +21,9 @@
     <None Update="Input\input10.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
+    <None Update="Input\input11.txt">
+      <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
+    </None>
     <None Update="Input\input4.txt">
       <CopyToOutputDirectory>PreserveNewest</CopyToOutputDirectory>
     </None>
